@@ -25,6 +25,7 @@ import org.testng.internal.ExitCode;
 import org.testng.internal.IConfiguration;
 import org.testng.internal.InstanceCreator;
 import org.testng.internal.OverrideProcessor;
+import org.testng.internal.ReporterConfig;
 import org.testng.internal.RuntimeBehavior;
 import org.testng.internal.SuiteRunnerMap;
 import org.testng.internal.Systematiser;
